--- a/Project/ISL/DataPerp_MP_ISL.ipynb
+++ b/Project/ISL/DataPerp_MP_ISL.ipynb
@@ -167,6 +167,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sample MP processing "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Path to your CSV file (including the file name and extension)\n",
+    "csv_file_path = r\"C:\\Users\\ranjan.patra\\OneDrive - Lingaro Sp. z o. o\\DATA\\IITJ\\Course\\Projects\\ISL\\ISL_CSLRT_Corpus\\corpus_csv_files\\ISL_CSLRT_Corpus details.csv\"\n",
+    "\n",
+    "# Read the CSV file into a pandas DataFrame\n",
+    "# Assuming UTF-8 encoding, but adjust if needed\n",
+    "df = pd.read_csv(csv_file_path.head(1))\n",
+    "\n",
+    "# Define the root path using raw string literal\n",
+    "rootpath = 'C:/Users/ranjan.patra/OneDrive - Lingaro Sp. z o. o/DATA/IITJ/Course/Projects/ISL/'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_prev=\"\"\n",
+    "#sample_num=0\n",
+    "df_k = pd.DataFrame(columns=['Label', 'sample_type','Sample_Number', 'Frame_Number', 'Keypoints'])\n",
+    "sample_type=\"Video\"\n",
+    "\n",
+    "\n",
+    "for index, row in df.iterrows():\n",
+    "    #print(\"label_prev:\",label_prev)\n",
+    "    #print(index)\n",
+    "    label = row[\"Sentences\"]  # Get the \"Word\" value for the current row\n",
+    "    #print(\"label:\",label)\n",
+    "    if label_prev!=label:\n",
+    "        sample_num=0\n",
+    "    else:\n",
+    "        sample_num=sample_num+1\n",
+    "    print(\"sample_num:\",sample_num)\n",
+    "    label_prev=label\n",
+    "    video_path = rootpath + row[\"File location\"]\n",
+    "    video_path = video_path.replace('/', '\\\\')\n",
+    "    print(\"video_path:\",row[\"File location\"])\n",
+    "    #video_path = r\"C:\\Users\\ranjan.patra\\OneDrive - Lingaro Sp. z o. o\\DATA\\IITJ\\Course\\Projects\\ISL\\ISL_DICTIONARY\\A\\Alien_species.mp4\"\n",
+    "\n",
+    "    #for video_file in VIDEO_FILES:\n",
+    "    cap = cv2.VideoCapture(video_path)\n",
+    "    with mp_holistic.Holistic(min_detection_confidence=0.5, min_tracking_confidence=0.5) as holistic:\n",
+    "        #print(\"Hi\")\n",
+    "        #frame_number = 0\n",
+    "        #with mp_holistic.Holistic(min_detection_confidence=0.5, min_tracking_confidence=0.5) as holistic:\n",
+    "        while cap.isOpened():\n",
+    "            ret, image = cap.read()\n",
+    "            if ret is None:\n",
+    "                print(\"Error reading frame. Exiting loop.\")\n",
+    "                break\n",
+    "            elif not ret:\n",
+    "                print(\"End of video reached. Exiting loop.\")\n",
+    "                break\n",
+    "\n",
+    "     \n",
+    "            image = cv2.cvtColor(cv2.flip(image, 1), cv2.COLOR_BGR2RGB)\n",
+    "            image.flags.writeable = False\n",
+    "            image, results = mediapipe_detection(image, holistic)\n",
+    "            image.flags.writeable = True\n",
+    "            image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
+    "\n",
+    "            keypoints = extract_keypoints(results)\n",
+    "            frame_number=cap.get(cv2.CAP_PROP_POS_FRAMES)\n",
+    "            print(\"Frame Num:\",frame_number)\n",
+    "            print(\"Frame Num:\", frame_number, keypoints)\n",
+    "            \n",
+    "\n",
+    "            draw_styled_landmarks(image, results)\n",
+    "            \n",
+    "\n",
+    "\n",
+    "            cv2.putText(image, 'Collecting frames for {}; Sample Number:{}; frame number:{}'.format(label,sample_num,frame_number), (15, 12),\n",
+    "                            cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 0, 255), 1, cv2.LINE_AA)\n",
+    "\n",
+    "\n",
+    "            cv2.imshow('OpenCV Feed', image)\n",
+    "\n",
+    "            keypoints = extract_keypoints(results)\n",
+    "            #new_data = pd.DataFrame({'Label': [label], 'sample_type': [sample_type],'Sample_Number': [sample_num], 'Frame_Number': [frame_number], 'Keypoints': [keypoints]})\n",
+    "\n",
+    "            #new_data = pd.DataFrame({'Label': [label], 'Sample Number': [sample_num], 'Frame Number': [frame_number], 'Keypoints': [keypoints]})\n",
+    "            #df_k = pd.concat([df_k, new_data], ignore_index=True)\n",
+    "\n",
+    "            if cv2.waitKey(10) & 0xFF == ord('q'):\n",
+    "                break\n",
+    "\n",
+    "                frame_number += 1\n",
+    "\n",
+    "        cap.release()\n",
+    "        print(\"Cap realease\")\n",
+    "        cv2.destroyAllWindows()\n",
+    "\n",
+    "#df_k.to_parquet(r\"C:\\Users\\ranjan.patra\\OneDrive - Lingaro Sp. z o. o\\DATA\\IITJ\\Course\\Projects\\ISL\\ISL_CSLRT_Corpus\\Mp_Data\\LandMarks\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Main Processing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
